update profile contents

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -78,17 +78,20 @@
 							<div class="container">
 								<div class="button-container">
 									<a class="btn btn-default btn-round btn-lg btn-icon"
-										href="https://www.linkedin.com/in/jbh1024/" target="_blank" rel="tooltip"
-										title="Follow me on linkedin"><i class="fa fa-linkedin"></i></a>
-									<a class="btn btn-default btn-round btn-lg btn-icon"
-										href="https://www.facebook.com/Hoon2Hoony/" target="_blank" rel="tooltip"
-										title="Follow me on Facebook"><i class="fa fa-facebook"></i></a>
-									<a class="btn btn-default btn-round btn-lg btn-icon"
-										href="http://instagram.com/hoonycrema/" target="_blank" rel="tooltip"
-										title="Follow me on Instagram" ><i class="fa fa-instagram"></i></a>
-									<a class="btn btn-default btn-round btn-lg btn-icon"
-										href="https://github.com/jbh1024" target="_blank" rel="tooltip"
-										title="Github"><i class="fa fa-github"></i></a>
+										href="https://www.linkedin.com/in/jbh1024/" target="_blank"
+										rel="tooltip" title="Follow me on linkedin"><i
+										class="fa fa-linkedin"></i></a> <a
+										class="btn btn-default btn-round btn-lg btn-icon"
+										href="https://www.facebook.com/Hoon2Hoony/" target="_blank"
+										rel="tooltip" title="Follow me on Facebook"><i
+										class="fa fa-facebook"></i></a> <a
+										class="btn btn-default btn-round btn-lg btn-icon"
+										href="http://instagram.com/hoonycrema/" target="_blank"
+										rel="tooltip" title="Follow me on Instagram"><i
+										class="fa fa-instagram"></i></a> <a
+										class="btn btn-default btn-round btn-lg btn-icon"
+										href="https://github.com/jbh1024" target="_blank"
+										rel="tooltip" title="Github"><i class="fa fa-github"></i></a>
 								</div>
 							</div>
 						</div>
@@ -104,12 +107,11 @@
 									<div class="h4 mt-0 title">About</div>
 									<p>Hello! I am Jeong Byeong Hun. Web Developer, SQL
 										Developer.</p>
-									<p>Here is my simple profile. if you want to know more
-										about me or hire me, please contact me by email below this
-										page.</p>
+									<p>Here is my brief profile. if you want to know more about
+										me or hire me, please contact me by email below this page.</p>
 									<p>
-										(This Page is Built with Bootstrap 4(use template) On Tomcat &
-										Apache Server that i made up.)<a
+										(This static Page is Built with Bootstrap 4(use template) On
+										Tomcat & Apache Server that i made up.)<a
 											href="https://templateflip.com/templates/creative-cv/"
 											target="_blank">Learn More</a>
 									</p>
@@ -158,8 +160,7 @@
 			</div>
 			<div class="section" id="skill">
 				<div class="container">
-					<div class="h4 text-center mb-4 title">Professional Skills -
-						update soon.</div>
+					<div class="h4 text-center mb-4 title">Professional Skills</div>
 					<div class="h4 mt-0 title">Language</div>
 					<div class="card" data-aos="fade-up"
 						data-aos-anchor-placement="top-bottom">
@@ -279,200 +280,108 @@
 				</div>
 			</div>
 			<div class="section" id="projects">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-6 ml-auto mr-auto">
-							<div class="h4 text-center mb-4 title">Projects</div>
-							<div class="nav-align-center">
-								<ul class="nav nav-pills nav-pills-primary" role="tablist">
-									<li class="nav-item"><a class="nav-link active"
-										data-toggle="tab" href="#web-development" role="tablist"><i
-											class="fa fa-laptop" aria-hidden="true"></i></a></li>
-									<li class="nav-item"><a class="nav-link" data-toggle="tab"
-										href="#graphic-design" role="tablist"><i
-											class="fa fa-picture-o" aria-hidden="true"></i></a></li>
-									<li class="nav-item"><a class="nav-link" data-toggle="tab"
-										href="#Photography" role="tablist"><i class="fa fa-camera"
-											aria-hidden="true"></i></a></li>
-								</ul>
+				<div class="container cc-experience">
+					<div class="h4 text-center mb-4 title">Projects</div>
+					<div class="card">
+						<div class="row">
+							<div class="col-md-3 bg-primary" data-aos="fade-right"
+								data-aos-offset="50" data-aos-duration="500">
+								<div class="card-body cc-experience-header">
+									<!-- <p>July 2018 - Present</p> -->
+									<div class="h5">July 2018 - Present</div>
+								</div>
+							</div>
+							<div class="col-md-9" data-aos="fade-left" data-aos-offset="50"
+								data-aos-duration="500">
+								<div class="card-body">
+									<div class="h5">BPO Platform Business Team</div>
+									<!-- <div class="h5">AS Developer</div> -->
+									<ul>
+										<li>Human Resource & Payroll Module Imporovemnt</li>
+									</ul>
+									<!-- 
+									 <ul>
+										<li><p><b>BPO Platform Business Team / Research Engineer (present)</b></p></li>
+										<li>Asia Cloud Strategic Business Unit / Junior Research Engineer</li>
+										<li>Asia Best Cloud Function Improving Team / Junior Research Engineer</li>
+									</ul>
+									 -->
+								</div>
 							</div>
 						</div>
 					</div>
-					<div class="tab-content gallery mt-5">
-						<div class="tab-pane active" id="web-development">
-							<div class="ml-auto mr-auto">
-								<div class="row">
-									<div class="col-md-6">
-										<div class="cc-porfolio-image img-raised" data-aos="fade-up"
-											data-aos-anchor-placement="top-bottom">
-											<a href="#web-development">
-												<figure class="cc-effect">
-													<img src="images/project-1.jpg" alt="Image" />
-													<figcaption>
-														<div class="h4">Recent Project</div>
-														<p>Web Development</p>
-													</figcaption>
-												</figure>
-											</a>
-										</div>
-										<div class="cc-porfolio-image img-raised" data-aos="fade-up"
-											data-aos-anchor-placement="top-bottom">
-											<a href="#web-development">
-												<figure class="cc-effect">
-													<img src="images/project-2.jpg" alt="Image" />
-													<figcaption>
-														<div class="h4">Startup Project</div>
-														<p>Web Development</p>
-													</figcaption>
-												</figure>
-											</a>
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="cc-porfolio-image img-raised" data-aos="fade-up"
-											data-aos-anchor-placement="top-bottom">
-											<a href="#web-development">
-												<figure class="cc-effect">
-													<img src="images/project-3.jpg" alt="Image" />
-													<figcaption>
-														<div class="h4">Food Order Project</div>
-														<p>Web Development</p>
-													</figcaption>
-												</figure>
-											</a>
-										</div>
-										<div class="cc-porfolio-image img-raised" data-aos="fade-up"
-											data-aos-anchor-placement="top-bottom">
-											<a href="#web-development">
-												<figure class="cc-effect">
-													<img src="images/project-4.jpg" alt="Image" />
-													<figcaption>
-														<div class="h4">Web Advertising Project</div>
-														<p>Web Development</p>
-													</figcaption>
-												</figure>
-											</a>
-										</div>
-									</div>
+					<div class="card">
+						<div class="row">
+							<div class="col-md-3 bg-primary" data-aos="fade-right"
+								data-aos-offset="50" data-aos-duration="500">
+								<div class="card-body cc-experience-header">
+									<!-- <p>October 2016 - June 2018</p> -->
+									<div class="h5">October 2016 - June 2018</div>
+								</div>
+							</div>
+							<div class="col-md-9" data-aos="fade-left" data-aos-offset="50"
+								data-aos-duration="500">
+								<div class="card-body">
+									<div class="h5">Asia Cloud Strategic Business Unit</div>
+									<ul>
+										<li>Using Omega T and Git to translate multiple languages
+											(English, Chinese, Indonesian, Vietnamese) Consistency of
+											terminology and translation, management of change history.
+											Apply translation data to company-wide solutions</li>
+										<li>Output file management design and screen
+											configuration.</li>
+										<li>Development and application of advance payment for
+											Indonesia</li>
+									</ul>
 								</div>
 							</div>
 						</div>
-						<div class="tab-pane" id="graphic-design" role="tabpanel">
-							<div class="ml-auto mr-auto">
-								<div class="row">
-									<div class="col-md-6">
-										<div class="cc-porfolio-image img-raised" data-aos="fade-up"
-											data-aos-anchor-placement="top-bottom">
-											<a href="#graphic-design">
-												<figure class="cc-effect">
-													<img src="images/graphic-design-1.jpg" alt="Image" />
-													<figcaption>
-														<div class="h4">Triangle Pattern</div>
-														<p>Graphic Design</p>
-													</figcaption>
-												</figure>
-											</a>
-										</div>
-										<div class="cc-porfolio-image img-raised" data-aos="fade-up"
-											data-aos-anchor-placement="top-bottom">
-											<a href="#graphic-design">
-												<figure class="cc-effect">
-													<img src="images/graphic-design-2.jpg" alt="Image" />
-													<figcaption>
-														<div class="h4">Abstract Umbrella</div>
-														<p>Graphic Design</p>
-													</figcaption>
-												</figure>
-											</a>
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="cc-porfolio-image img-raised" data-aos="fade-up"
-											data-aos-anchor-placement="top-bottom">
-											<a href="#graphic-design">
-												<figure class="cc-effect">
-													<img src="images/graphic-design-3.jpg" alt="Image" />
-													<figcaption>
-														<div class="h4">Cube Surface Texture</div>
-														<p>Graphic Design</p>
-													</figcaption>
-												</figure>
-											</a>
-										</div>
-										<div class="cc-porfolio-image img-raised" data-aos="fade-up"
-											data-aos-anchor-placement="top-bottom">
-											<a href="#graphic-design">
-												<figure class="cc-effect">
-													<img src="images/graphic-design-4.jpg" alt="Image" />
-													<figcaption>
-														<div class="h4">Abstract Line</div>
-														<p>Graphic Design</p>
-													</figcaption>
-												</figure>
-											</a>
-										</div>
-									</div>
+					</div>
+					<div class="card">
+						<div class="row">
+							<div class="col-md-3 bg-primary" data-aos="fade-right"
+								data-aos-offset="50" data-aos-duration="500">
+								<div class="card-body cc-experience-header">
+									<div class="h5">February 2015 - September 2015</div>
+								</div>
+							</div>
+							<div class="col-md-9" data-aos="fade-left" data-aos-offset="50"
+								data-aos-duration="500">
+								<div class="card-body">
+									<div class="h5">2015 Advanced Prosecutors' Office System</div>
+									<ul>
+										<li>Human Resource & Payroll Module Imporovemnt</li>
+									</ul>
+									<ul>
+										<li>Restore function that was previously malfunctioning</li>
+										<li>Create output</li>
+										<li>Simplify the complexity of the old screen system and
+											apply new design to increase the convenience of work.</li>
+										<li>Contribution to shorten user's working time.</li>
+									</ul>
 								</div>
 							</div>
 						</div>
-						<div class="tab-pane" id="Photography" role="tabpanel">
-							<div class="ml-auto mr-auto">
-								<div class="row">
-									<div class="col-md-6">
-										<div class="cc-porfolio-image img-raised" data-aos="fade-up"
-											data-aos-anchor-placement="top-bottom">
-											<a href="#Photography">
-												<figure class="cc-effect">
-													<img src="images/photography-1.jpg" alt="Image" />
-													<figcaption>
-														<div class="h4">Photoshoot</div>
-														<p>Photography</p>
-													</figcaption>
-												</figure>
-											</a>
-										</div>
-										<div class="cc-porfolio-image img-raised" data-aos="fade-up"
-											data-aos-anchor-placement="top-bottom">
-											<a href="#Photography">
-												<figure class="cc-effect">
-													<img src="images/photography-3.jpg" alt="Image" />
-													<figcaption>
-														<div class="h4">Wedding Photoshoot</div>
-														<p>Photography</p>
-													</figcaption>
-												</figure>
-											</a>
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="cc-porfolio-image img-raised" data-aos="fade-up"
-											data-aos-anchor-placement="top-bottom">
-											<a href="#Photography">
-												<figure class="cc-effect">
-													<img src="images/photography-2.jpg" alt="Image" />
-													<figcaption>
-														<div class="h4">Beach Photoshoot</div>
-														<p>Photography</p>
-													</figcaption>
-												</figure>
-											</a>
-										</div>
-										<div class="cc-porfolio-image img-raised" data-aos="fade-up"
-											data-aos-anchor-placement="top-bottom">
-											<a href="#Photography">
-												<figure class="cc-effect">
-													<img src="images/photography-4.jpg" alt="Image" />
-													<figcaption>
-														<div class="h4">Nature Photoshoot</div>
-														<p>Photography</p>
-													</figcaption>
-												</figure>
-											</a>
-										</div>
-									</div>
+
+					</div><div class="card">
+						<div class="row">
+							<div class="col-md-3 bg-primary" data-aos="fade-right"
+								data-aos-offset="50" data-aos-duration="500">
+								<div class="card-body cc-experience-header">
+									<div class="h5">Before - October 2015</div>
+								</div>
+							</div>
+							<div class="col-md-9" data-aos="fade-left" data-aos-offset="50"
+								data-aos-duration="500">
+								<div class="card-body">
+									<div class="h5">Some Projects about Prosecutors' Office</div>
+									<ul>
+										<li>Update Soon.</li>
+									</ul>
 								</div>
 							</div>
 						</div>
+
 					</div>
 				</div>
 			</div>
@@ -492,7 +401,16 @@
 								data-aos-duration="500">
 								<div class="card-body">
 									<div class="h5">Developer</div>
-									<p>Update Soon...</p>
+									<ul>
+										<li><p>
+												<b>BPO Platform Business Team / Research Engineer
+													(present)</b>
+											</p></li>
+										<li>Asia Cloud Strategic Business Unit / Junior Research
+											Engineer</li>
+										<li>Asia Best Cloud Function Improving Team / Junior
+											Research Engineer</li>
+									</ul>
 								</div>
 							</div>
 						</div>
@@ -510,7 +428,9 @@
 								data-aos-duration="500">
 								<div class="card-body">
 									<div class="h5">Developer</div>
-									<p>Update Soon...</p>
+									<ul>
+										<li>System Integration Division / Employee</li>
+									</ul>
 								</div>
 							</div>
 						</div>
