add github link icon in page bottom

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -107,8 +107,8 @@
 									<div class="h4 mt-0 title">About</div>
 									<p>Hello! I am Jeong Byeong Hun. Web Developer, SQL
 										Developer.</p>
-									<p>Here is my brief profile. if you want to know more about
 										me or hire me, please contact me by email below this page.</p>
+									<p>Here is my brief profile. if you want to know more about
 									<p>
 										(This static Page is Built with Bootstrap 4(use template) On
 										Tomcat & Apache Server that i made up.)<a
@@ -648,7 +648,9 @@
 				class="cc-linkedin btn btn-link " href="#"><i
 				class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a> <a
 				class="cc-instagram btn btn-link" href="#"><i
-				class="fa fa-instagram fa-2x " aria-hidden="true"></i></a>
+				class="fa fa-instagram fa-2x " aria-hidden="true"></i></a><a
+				class="cc-github btn btn-link" href="#"><i
+				class="fa fa-github fa-2x " aria-hidden="true"></i></a>
 		</div>
 		<div class="h4 title text-center">Jeong Byeong Hun</div>
 		<div class="text-center text-muted">
