update contact info / projects info

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -124,7 +124,7 @@
 										<div class="col-sm-4">
 											<strong class="text-uppercase">Age:</strong>
 										</div>
-										<div class="col-sm-8">30</div>
+										<div class="col-sm-8">30(Born in 1988)</div>
 									</div>
 									<div class="row mt-3">
 										<div class="col-sm-4">
@@ -136,7 +136,7 @@
 										<div class="col-sm-4">
 											<strong class="text-uppercase">Phone:</strong>
 										</div>
-										<div class="col-sm-8">+82-10-9070-2848</div>
+										<div class="col-sm-8">+82-10-0000-0000</div>
 									</div>
 									<div class="row mt-3">
 										<div class="col-sm-4">
@@ -374,9 +374,12 @@
 							<div class="col-md-9" data-aos="fade-left" data-aos-offset="50"
 								data-aos-duration="500">
 								<div class="card-body">
-									<div class="h5">Some Projects about Prosecutors' Office</div>
+									<div class="h5">Some Projects about Prosecutor's Office</div>
 									<ul>
-										<li>.</li>
+										<li>2015 Supreme Prosecutor's Office Sentencing system advancement project</li>
+										<li>Supreme Prosecutor's Office DNA information management system maintenance</li>
+										<li>Supreme Prosecutor's Office Korea Infomation System of Criminal-justice Services(KICS) advancement project</li>
+										<li>2014 Supreme Prosecutor's Office Sentencing system advancement project</li>
 									</ul>
 								</div>
 							</div>
@@ -622,7 +625,7 @@
 													<p class="mb-0">
 														<strong>Phone</strong>
 													</p>
-													<p class="pb-2">+10-9070-2848</p>
+													<p class="pb-2">+82-10-0000-0000</p>
 													<p class="mb-0">
 														<strong>Email</strong>
 													</p>
