contents modify : about part, Language part

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -107,8 +107,8 @@
 									<div class="h4 mt-0 title">About</div>
 									<p>Hello! I am Jeong Byeong Hun. Web Developer, SQL
 										Developer.</p>
-										me or hire me, please contact me by email below this page.</p>
 									<p>Here is my brief profile. if you want to know more about
+										me or hire me, please contact me by email below this page.</p>
 									<p>
 										(This static Page is Built with Bootstrap 4(use template) On
 										Tomcat & Apache Server that i made up.)<a
@@ -149,8 +149,7 @@
 										<div class="col-sm-4">
 											<strong class="text-uppercase">Language:</strong>
 										</div>
-										<div class="col-sm-8">Korean(mother tongue) / English(a
-											little) / Japanese(a bit)</div>
+										<div class="col-sm-8">Korean(Native) / English(Basic) / Japanese(Beginner)</div>
 									</div>
 								</div>
 							</div>
