--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -111,9 +111,10 @@
 										me or hire me, please contact me by email below this page.</p>
 									<p>
 										(This static Page is Built with Bootstrap 4(use template) On
-										Tomcat & Apache Server that i made up.)<a
-											href="https://templateflip.com/templates/creative-cv/"
-											target="_blank">Learn More</a>
+										Tomcat & Apache Server that i made up.)
+									</p>
+									<p>
+										(Pages written in Korean will be update soon.)
 									</p>
 								</div>
 							</div>
@@ -174,7 +175,7 @@
 												data-aos-duration="2000" role="progressbar"
 												aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
 												style="width: 80%;"></div>
-											<span class="progress-value">with spring, spring boot</span>
+											<span class="progress-value">with spring framework, egov framework</span>
 										</div>
 									</div>
 								</div>
@@ -657,6 +658,10 @@
 			<p>
 				&copy; Creative CV. All rights reserved.<br>Design - <a
 					class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a>
+			</p>
+			<p>
+			<a href="https://templateflip.com/templates/creative-cv/"
+											target="_blank">about This Template</a>
 			</p>
 		</div>
 	</footer>
