영문 간단 소개 추가

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -104,18 +104,18 @@
 						<div class="row">
 							<div class="col-lg-6 col-md-12">
 								<div class="card-body">
-									<div class="h4 mt-0 title">About</div>
+									<div class="h4 mt-0 title">About me</div>
 									<p>Hello! I am Jeong Byeong Hun. Web Developer, SQL
 										Developer.</p>
-									<p>Here is my brief profile. if you want to know more about
-										me or hire me, please contact me by email below this page.</p>
-									<p>
-										(This static Page is Built with Bootstrap 4(use template) On
-										Tomcat & Apache Server that i made up.)
-									</p>
-									<p>
-										(Pages written in Korean will be update soon.)
-									</p>
+									<p>I was interested in Programming, when i was preparing to
+										acquire a 'Craftsman Information Processing' license as a
+										chile.</p>
+									<p>Since then I have been dreaming of developers. So I
+										majored in computer science. And i work as a programmer today.</p>
+									<p>I want to remain as a <b>"good" developer</b>. not "just nomal"
+										programmer. <br/> So I am keep trying to be a better
+										developer. <br/>I'm studying my major and English to get higher
+										positions as a developer.</p>
 								</div>
 							</div>
 							<div class="col-lg-6 col-md-12">
@@ -150,8 +150,22 @@
 										<div class="col-sm-4">
 											<strong class="text-uppercase">Language:</strong>
 										</div>
-										<div class="col-sm-8">Korean(Native) / English(Basic) / Japanese(Beginner)</div>
+										<div class="col-sm-8">Korean(Native) / English(Basic) /
+											Japanese(Beginner)</div>
 									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-lg-12 col-md-2">
+								<div class="card-body">
+									<div class="h4 mt-0 title">About this page.</div>
+									<p>This page is my brief profile and portfolio. if you want to
+										know more about me or hire me, please contact me by email
+										below this page.</p>
+									<p>This static Page is Built with Bootstrap 4(use
+										template) On Tomcat & Apache Server that i made up.</p>
+									<p>Pages written in Korean will be update soon.(i made English version first, cause i studying hard English these days. ;) )</p>
 								</div>
 							</div>
 						</div>
@@ -175,7 +189,8 @@
 												data-aos-duration="2000" role="progressbar"
 												aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
 												style="width: 80%;"></div>
-											<span class="progress-value">with spring framework, egov framework</span>
+											<span class="progress-value">with spring framework,
+												egov framework</span>
 										</div>
 									</div>
 								</div>
@@ -363,7 +378,8 @@
 							</div>
 						</div>
 
-					</div><div class="card">
+					</div>
+					<div class="card">
 						<div class="row">
 							<div class="col-md-3 bg-primary" data-aos="fade-right"
 								data-aos-offset="50" data-aos-duration="500">
@@ -376,10 +392,14 @@
 								<div class="card-body">
 									<div class="h5">Some Projects about Prosecutor's Office</div>
 									<ul>
-										<li>2015 Supreme Prosecutor's Office Sentencing system advancement project</li>
-										<li>Supreme Prosecutor's Office DNA information management system maintenance</li>
-										<li>Supreme Prosecutor's Office Korea Infomation System of Criminal-justice Services(KICS) advancement project</li>
-										<li>2014 Supreme Prosecutor's Office Sentencing system advancement project</li>
+										<li>2015 Supreme Prosecutor's Office Sentencing system
+											advancement project</li>
+										<li>Supreme Prosecutor's Office DNA information
+											management system maintenance</li>
+										<li>Supreme Prosecutor's Office Korea Infomation System
+											of Criminal-justice Services(KICS) advancement project</li>
+										<li>2014 Supreme Prosecutor's Office Sentencing system
+											advancement project</li>
 									</ul>
 								</div>
 							</div>
@@ -660,8 +680,8 @@
 					class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a>
 			</p>
 			<p>
-			<a href="https://templateflip.com/templates/creative-cv/"
-											target="_blank">about This Template</a>
+				<a href="https://templateflip.com/templates/creative-cv/"
+					target="_blank">about This Template</a>
 			</p>
 		</div>
 	</footer>
