status&information update

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -157,14 +157,14 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-lg-12 col-md-2">
+							<div class="col-lg-12 col-md-12">
 								<div class="card-body">
 									<div class="h4 mt-0 title">About this page.</div>
 									<p>This page is my brief profile and portfolio. if you want to
 										know more about me or hire me, please contact me by email
 										below this page.</p>
 									<p>This static Page is Built with Bootstrap 4(use
-										template) On Tomcat & Apache Server that i made up.</p>
+										template) On <del>Tomcat & Apache</del> nginx/1.16.1 Server that i <del>made</del> making up these days.</p>
 									<p>Pages written in Korean will be update soon.(i made English version first, cause i studying hard English these days. ;) )</p>
 								</div>
 							</div>
@@ -303,7 +303,7 @@
 								data-aos-offset="50" data-aos-duration="500">
 								<div class="card-body cc-experience-header">
 									<!-- <p>July 2018 - Present</p> -->
-									<div class="h5">July 2018 - Present</div>
+									<div class="h5">July 2018 - September 2019</div>
 								</div>
 							</div>
 							<div class="col-md-9" data-aos="fade-left" data-aos-offset="50"
@@ -312,7 +312,10 @@
 									<div class="h5">BPO Platform Business Team</div>
 									<!-- <div class="h5">AS Developer</div> -->
 									<ul>
-										<li>Human Resource & Payroll Module Imporovemnt</li>
+										<li>ERP HR / Payment Module Improved the screen UI and functions related to employee basic information.</li>
+										<li>Multilingual Support and Forms for Human Resources and Payroll.</li>
+										<li>Improved ERP permissions screen UI and functionality.</li>
+										<li>Payroll Email Sending Multilingual Support and Form Enhancements.</li>
 									</ul>
 									<!-- 
 									 <ul>
