information update / 오타 수정 / 불필요 주석 제거

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -69,7 +69,7 @@
 								<div class="h2 title">Jeong Byeong Hun</div>
 								<p class="category text-white">Web Developer, SQL Developer</p>
 								<a class="btn btn-primary smooth-scroll mr-2" href="#contact"
-									data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire
+								   data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact
 									Me</a>
 
 							</div>
@@ -303,27 +303,16 @@
 								data-aos-offset="50" data-aos-duration="500">
 								<div class="card-body cc-experience-header">
 									<!-- <p>July 2018 - Present</p> -->
-									<div class="h5">July 2018 - September 2019</div>
+									<div class="h5">January 2020 - Present</div>
 								</div>
 							</div>
 							<div class="col-md-9" data-aos="fade-left" data-aos-offset="50"
-								data-aos-duration="500">
+								 data-aos-duration="500">
 								<div class="card-body">
-									<div class="h5">BPO Platform Business Team</div>
-									<!-- <div class="h5">AS Developer</div> -->
+									<div class="h5">Web Development Team 1 / R & D Center</div>
 									<ul>
-										<li>ERP HR / Payment Module Improved the screen UI and functions related to employee basic information.</li>
-										<li>Multilingual Support and Forms for Human Resources and Payroll.</li>
-										<li>Improved ERP permissions screen UI and functionality.</li>
-										<li>Payroll Email Sending Multilingual Support and Form Enhancements.</li>
+										<li>...</li>
 									</ul>
-									<!-- 
-									 <ul>
-										<li><p><b>BPO Platform Business Team / Research Engineer (present)</b></p></li>
-										<li>Asia Cloud Strategic Business Unit / Junior Research Engineer</li>
-										<li>Asia Best Cloud Function Improving Team / Junior Research Engineer</li>
-									</ul>
-									 -->
 								</div>
 							</div>
 						</div>
@@ -331,7 +320,33 @@
 					<div class="card">
 						<div class="row">
 							<div class="col-md-3 bg-primary" data-aos="fade-right"
-								data-aos-offset="50" data-aos-duration="500">
+								 data-aos-duration="500" data-aos-offset="50">
+								<div class="card-body cc-experience-header">
+									<!-- <p>July 2018 - Present</p> -->
+									<div class="h5">July 2018 - September 2019</div>
+								</div>
+							</div>
+							<div class="col-md-9" data-aos="fade-left" data-aos-duration="500"
+								 data-aos-offset="50">
+								<div class="card-body">
+									<div class="h5">BPO Platform Business Team</div>
+									<!-- <div class="h5">AS Developer</div> -->
+									<ul>
+										<li>ERP HR / Payment Module Improved the screen UI and functions related to
+											employee basic information.
+										</li>
+										<li>Multilingual Support and Forms for Human Resources and Payroll.</li>
+										<li>Improved ERP permissions screen UI and functionality.</li>
+										<li>Payroll Email Sending Multilingual Support and Form Enhancements.</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="row">
+							<div class="col-md-3 bg-primary" data-aos="fade-right"
+								 data-aos-offset="50" data-aos-duration="500">
 								<div class="card-body cc-experience-header">
 									<!-- <p>October 2016 - June 2018</p> -->
 									<div class="h5">October 2016 - June 2018</div>
@@ -419,8 +434,8 @@
 							<div class="col-md-3 bg-primary" data-aos="fade-right"
 								data-aos-offset="50" data-aos-duration="500">
 								<div class="card-body cc-experience-header">
-									<p>June 2016 - Present</p>
-									<div class="h5">Younglimwon Soft Lab</div>
+									<p>January 2020 - Present</p>
+									<div class="h5">R Support</div>
 								</div>
 							</div>
 							<div class="col-md-9" data-aos="fade-left" data-aos-offset="50"
@@ -429,13 +444,8 @@
 									<div class="h5">Developer</div>
 									<ul>
 										<li><p>
-												<b>BPO Platform Business Team / Research Engineer
-													(present)</b>
-											</p></li>
-										<li>Asia Cloud Strategic Business Unit / Junior Research
-											Engineer</li>
-										<li>Asia Best Cloud Function Improving Team / Junior
-											Research Engineer</li>
+											<b>Web Development Team 1 / Back-end Developer (Present)</b>
+										</p></li>
 									</ul>
 								</div>
 							</div>
@@ -444,7 +454,33 @@
 					<div class="card">
 						<div class="row">
 							<div class="col-md-3 bg-primary" data-aos="fade-right"
-								data-aos-offset="50" data-aos-duration="500">
+								 data-aos-duration="500" data-aos-offset="50">
+								<div class="card-body cc-experience-header">
+									<p>June 2016 - September 2019</p>
+									<div class="h5">Younglimwon Soft Lab</div>
+								</div>
+							</div>
+							<div class="col-md-9" data-aos="fade-left" data-aos-duration="500"
+								 data-aos-offset="50">
+								<div class="card-body">
+									<div class="h5">Developer</div>
+									<ul>
+										<li>BPO Platform Business Team / Research Engineer</li>
+										<li>Asia Cloud Strategic Business Unit / Junior Research
+											Engineer
+										</li>
+										<li>Asia Best Cloud Function Improving Team / Junior
+											Research Engineer
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="row">
+							<div class="col-md-3 bg-primary" data-aos="fade-right"
+								 data-aos-offset="50" data-aos-duration="500">
 								<div class="card-body cc-experience-header">
 									<p>April 2014 - September 2015</p>
 									<div class="h5">InsideInfo</div>
